--- a/app/templates/analyze_video/index.html
+++ b/app/templates/analyze_video/index.html
@@ -18,7 +18,7 @@
     <div class="analyze-header">
         <h1 class="analyze-title">
             <i class="ph ph-video"></i>
-            Analyze Video
+            Analyze / Search Videos
         </h1>
     </div>
 
